--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "3.17.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
