--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@astrojs/react": "3.0.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "4.0.5",
+    "@portabletext/to-html": "^2.0.5",
     "@sanity/astro": "1.3.0",
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.17.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "astro": "3.2.2",
