--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "jsx": "preserve"
   },
   "includes": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist", ".vercel"]
+  "exclude": ["node_modules", "dist", ".vercel"],
 }
