--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "3.17.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
