--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/react": "3.0.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "4.0.5",
+    "@portabletext/react": "^3.0.11",
     "@portabletext/to-html": "^2.0.5",
     "@sanity/astro": "1.3.0",
+    "@sanity/color-input": "^3.1.0",
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.17.0",
     "@tailwindcss/typography": "^0.5.10",
