--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,20 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      },
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@partials/*": ["src/components/Partials/*"],
+      "@sections/*": ["src/components/sections/*"],
+      "@nav/*": ["src/components/Nav/*"],
+    }
   },
   "includes": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist", ".vercel"],
