--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
-    "astro": "3.2.2",
+    "astro": "^3.3",
     "astro-portabletext": "0.9.4",
     "autoprefixer": "10.4.16",
     "groq": "3.17.0",
