--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@portabletext/to-html": "^2.0.5",
     "@sanity/astro": "1.3.0",
     "@sanity/color-input": "^3.1.0",
-    "@sanity/image-url": "1.0.2",
+    "@sanity/icons": "^2.11.2",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "3.17.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "astro": "^3.3",
-    "astro-portabletext": "0.9.4",
+    "astro-portabletext": "^0.9.4",
     "autoprefixer": "10.4.16",
     "groq": "3.17.0",
     "prettier-plugin-astro": "0.12.0",
