--- a/package.json
+++ b/package.json
@@ -43,9 +43,6 @@
     "prettier": "3.0.3",
     "rimraf": "5.0.1",
     "typescript": "5.2.2",
-    "vite": "4.4.10"
-  },
-  "engines": {
-    "node": ">= 18"
+    "vite": "^4.5.2"
   }
 }
